# Biped-PyMPC

./: .gitignore  README.md  pyproject.toml
biped_pympc/: __init__.py  biped_controller.py  mpc_wrapper.py
biped_pympc/casadi/: generate_solver_function.py  mpc_solver_trial_fast.py  sparse_pdipm_solver.py  srbd_centroidal_model.py  srbd_constraints.py  srbd_mpc_solver.py  t1_kinematics.py
biped_pympc/casadi/utils/: animation.py
biped_pympc/configuration/: configuration.py
biped_pympc/controllers/: leg_controller.py  state_estimator.py  swing_leg_controller.py  swing_leg_trajectory.py
biped_pympc/convex_mpc/: README.md  base_controller.py  mpc_controller_casadi.py  mpc_controller_cusadi.py  mpc_controller_osqp.py  mpc_controller_qpth.py
biped_pympc/core/data/: robot_data.py
biped_pympc/core/gait/: gait_generator.py
biped_pympc/core/robot/: biped.py  hector.py  robot_factory.py  t1.py
biped_pympc/cusadi/: .gitignore  run_codegen.py  run_cusadi_function_test.py
biped_pympc/cusadi/src/: CusadiFunction.py  __init__.py  generateCUDACode.py  generatePytorchCode.py
biped_pympc/utils/: dynamics_utils.py  math_utils.py  solver_utils.py
model/: t1_serial.urdf
script/: setup.sh
